fix: contact spacing

--- a/themes/hugo-brewm/assets/css/layout/_default/single.css
+++ b/themes/hugo-brewm/assets/css/layout/_default/single.css
@@ -375,3 +375,7 @@ header time {
     }
 
 }
+
+ul[role="presentation"] li {
+    margin-bottom: 20px; /* Adjust this value as needed */
+  }
